# aerotica

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  BASELINE.md  CHANGELOG.md  CITATION.cff  COMPLETION.md  COMPLETION.txt  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  DESCRIPTION.md  Dockerfile  INSTALL.md  INSTALLATION.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  environment.yml  executive_summary.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  upload_aerotica.py
benchmarks/: README.md
configs/: aerotica.default.yaml  development.yaml  production.yaml  tokyo_urban.yaml
data/les_benchmarks/: README.md
data/realtime/: README.md
data/reference/: README.md
docs/: AEROTICA_Research_Paper.docx  api_reference.md  changelog.md  contributing.md  deployment.md  index.md  installation.md  parameters.md  pinn_architecture.md  quickstart.md
docs/api/: README.md
docs/examples/: README.md
docs/parameters/: README.md
examples/: complete_demo.py  gust_prealert_demo.py  tokyo_case_study.py  urban_assessment_demo.py
notebooks/: README.md
reports/: README.md
scripts/: compute_ake.py  generate_api_docs.py  gust_prealert.py  launch_dashboard.py  offshore_optimize.py  prepare_release.py  run_benchmarks.py  run_validation.py  train_pinn.py  urban_assessment.py
src/aerotica/: __init__.py  cli.py  config.py  exceptions.py  version.py
src/aerotica/ake/: __init__.py  composite.py  thresholds.py  weights.py
src/aerotica/alerts/: __init__.py  detector.py  engine.py  notifier.py
src/aerotica/api/: __init__.py  main.py  routes.py
src/aerotica/climate_zones/: __init__.py  zones.py
src/aerotica/offshore/: __init__.py  layout.py  optimizer.py  resource.py  wake_model.py
src/aerotica/parameters/: __init__.py  aod.py  asi.py  hci.py  ked.py  lrc.py  pgf.py  thd.py  tii.py  vsr.py
src/aerotica/pinn/: __init__.py  fourier_features.py  inference.py  loss.py  pressure_net.py  temperature_net.py  trainer.py  velocity_net.py
src/aerotica/preprocessing/: __init__.py  radar.py  radiosonde.py  station_data.py
src/aerotica/remote_sensing/: __init__.py  modis.py  satellite.py
src/aerotica/urban/: __init__.py  assessor.py  morphology.py  rooftop.py
src/aerotica/utils/: __init__.py  geo.py  io.py  math.py  time.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md  __init__.py  sample_data.py
tests/integration/: __init__.py  test_ake_pipeline.py  test_end_to_end.py
tests/simple/: test_alerts_simple.py  test_offshore_simple.py  test_urban_simple.py
tests/unit/: test_alerts.py  test_ked.py  test_offshore.py  test_parameters.py  test_tii.py  test_urban.py  test_vsr.py
