[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerotica-ake"
version = "1.0.0"
description = "AEROTICA: Atmospheric Kinetic Energy Mapping and Aero-Elastic Resilience Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"},
]
keywords = ["atmospheric physics", "kinetic energy", "turbulence", "wind shear", "neural networks", "navier-stokes", "renewable energy", "fluid dynamics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://aerotica.netlify.app"
Documentation = "https://aerotica.netlify.app/documentation"
Repository = "https://gitlab.com/gitdeeper07/aerotica"
"Bug Tracker" = "https://gitlab.com/gitdeeper07/aerotica/-/issues"

[tool.setuptools]
packages = ["aerotica"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
aerotica = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["aerotica"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["aerotica"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
