[metadata]
name = aerotica-ake
version = 1.0.0
url = https://gitlab.com/gitdeeper07/aerotica
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
license = MIT
license_file = LICENSE
description = AEROTICA: Atmospheric Kinetic Energy Mapping and Aero-Elastic Resilience Framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = atmospheric physics, kinetic energy, turbulence, wind shear, neural networks, navier-stokes, renewable energy, fluid dynamics
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Framework :: Pytest
    Natural Language :: English
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    pandas>=1.3.0
    xarray>=2022.3.0
    netCDF4>=1.5.8
    torch>=2.3.0
    deepxde>=1.9.0
    gdal>=3.4.0
    rasterio>=1.3.0
    shapely>=2.0.0
    geopandas>=0.12.0
    matplotlib>=3.5.0
    seaborn>=0.12.0
    plotly>=5.10.0
    cartopy>=0.21.0
    pyyaml>=6.0
    python-dotenv>=0.19.0
    click>=8.0.0
    tqdm>=4.64.0
    h5py>=3.7.0
    pydantic>=1.10.0
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude =
    docs
    tests
    examples
    scripts

[options.extras_require]
gpu =
    torch>=2.3.0
    cupy-cuda11x>=11.0.0
ml =
    torch>=2.3.0
    deepxde>=1.9.0
    scikit-learn>=1.0.0
viz =
    matplotlib>=3.5.0
    seaborn>=0.12.0
    plotly>=5.10.0
    cartopy>=0.21.0
web =
    fastapi>=0.95.0
    uvicorn>=0.21.0
    python-multipart>=0.0.5
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    ruff>=0.0.260
    mypy>=1.0.0
    pre-commit>=3.0.0
    build>=0.10.0
    twine>=4.0.0
docs =
    mkdocs>=1.4.0
    mkdocs-material>=9.0.0
    mkdocstrings[python]>=0.20.0
    mkdocs-jupyter>=0.24.0
all =
    %(gpu)s
    %(ml)s
    %(viz)s
    %(web)s
    %(dev)s
    %(docs)s

[options.entry_points]
console_scripts =
    aerotica = aerotica.cli:main
    aerotica-ake = aerotica.cli:ake
    aerotica-pinn = aerotica.cli:pinn
    aerotica-gust = aerotica.cli:gust

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv

[isort]
profile = black
line_length = 88
known_first_party = aerotica

[bdist_wheel]
universal = 0
